--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <body>
     <div class="container p-5">
       <!-- toast trigger -->
-      <button type="button" class="btn btn-primary" id="liveToastBtn">
+      <!-- <button type="button" class="btn btn-primary" id="liveToastBtn">
         Show live toast
-      </button>
+      </button> -->
       <!-- toast content -->
       <div class="toast-container position-fixed bottom-0 end-0 p-3">
         <div
@@ -41,6 +41,87 @@
           <div class="toast-body">Hello, world! This is a toast message.</div>
         </div>
       </div>
+      <!-- toast content end -->
+
+      <!-- form -->
+      <form action="">
+        <div class="row mb-3">
+          <div class="col-6">
+            <label for="email">Email:</label>
+            <input
+              type="email"
+              class="form-control"
+              placeholder="example@mail.com"
+              name="email"
+              id="email"
+            />
+          </div>
+          <div class="col-6">
+            <label for="full-name">Name:</label>
+            <input
+              type="text"
+              class="form-control"
+              placeholder="John Doe"
+              name="full-name"
+              id="full-name"
+            />
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-6">
+            <div class="form-check">
+              Male
+              <input
+                class="form-check-input"
+                value="m"
+                type="radio"
+                name="gender"
+              />
+            </div>
+            <div class="form-check">
+              Female
+              <input
+                class="form-check-input"
+                value="f"
+                type="radio"
+                name="gender"
+              />
+            </div>
+          </div>
+          <div class="col-6">
+            <select name="options" class="form-select">
+              <option>Please select</option>
+              <option value="x">x</option>
+              <option value="y">y</option>
+            </select>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-6">
+            <div class="form-check">
+              <input type="check" class="form-check-input" /> Aggree to terms
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col">
+            <label for="message"> Message </label>
+            <textarea
+              class="form-control"
+              name="message"
+              id="message"
+              placeholder="type your message..."
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6 offset-3 d-grid">
+            <button class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </form>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
