--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- toast content end -->
 
       <!-- form -->
-      <form action="">
+      <!-- <form action="">
         <div class="row mb-3">
           <div class="col-6">
             <label for="email">Email:</label>
@@ -73,6 +73,86 @@
               Male
               <input
                 class="form-check-input"
+                value="m"
+                type="radio"
+                name="gender"
+              />
+            </div>
+            <div class="form-check">
+              Female
+              <input
+                class="form-check-input"
+                value="f"
+                type="radio"
+                name="gender"
+              />
+            </div>
+          </div>
+          <div class="col-6">
+            <select name="options" class="form-select">
+              <option>Please select</option>
+              <option value="x">x</option>
+              <option value="y">y</option>
+            </select>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-6">
+            <div class="form-check">
+              <input type="check" class="form-check-input" /> Aggree to terms
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col">
+            <label for="message"> Message </label>
+            <textarea
+              class="form-control"
+              name="message"
+              id="message"
+              placeholder="type your message..."
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6 offset-3 d-grid">
+            <button class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </form> -->
+      <!-- form validation -->
+      <form action="" class="need-validation">
+        <div class="row mb-3">
+          <div class="col-6">
+            <label for="email">Email:</label>
+            <input
+              type="email"
+              class="form-control is-invalid"
+              placeholder="example@mail.com"
+              name="email"
+              id="email"
+            />
+            <div class="error-message text-danger">Please provide Email</div>
+          </div>
+          <div class="col-6">
+            <label for="full-name">Name:</label>
+            <input
+              type="text"
+              class="form-control is-invalid"
+              placeholder="John Doe"
+              name="full-name"
+              id="full-name"
+            />
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="col-6">
+            <div class="form-check">
+              Male
+              <input
+                class="form-check-input is-invalid"
                 value="m"
                 type="radio"
                 name="gender"
